# fpl-mappers

./: LICENSE  README.md  create_master_csv.py  master.csv  pyproject.toml  requirements.txt  teams.json
FBref/: fbref_data.csv  get_fbref_data.py  id_map.csv
FPL/: fpl_data.csv  get_fpl_data.py
Understat/: id_map.csv
docs/: CNAME  index.md
fbref/data/: fbref-fpl-mapping.csv  sample-fbref.csv  sample-fpl.csv
