[tool.poetry]
name = "fpl-mappers"
version = "0.1.0"
description = "Repository to map FPL players to major football stats provider data"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
